# agents

./: README.md  api_server.py  app_main.py  pyproject.toml
agents/: __init__.py  agents.py  code_reader.py  code_reader_agent.py  document_generator_agent.py  documentation_agent.py  go_expert_agent.py  graph_creation.py  javascript_expert_agent.py  python_expert_agent.py  root_agent.py
core/: interaction_handler.py
fe/: biome.json  package.json
fe/src/: App.tsx  globals.css  main.tsx
fe/src/api/: apiAgent.ts
fe/src/components/: historyChat.tsx  input.tsx  pathInit.tsx  pathItem.tsx  paths.tsx  promptInput.tsx  wrapper.tsx
fe/src/types/: types.ts
fe/src/utils/: persistValue.ts
tools/: __init__.py  get_current_time.py  get_file.py
