[project]
name = "Documantation-Generator"
version = "0.1.1"
description = "A tool to generate documentation and graphs from repositories."
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "google-adk>=1.0.0",
    "google-genai>=1.16.1",
    "graphviz>=0.20.3",
    "litellm>=1.71.1",
]
